--- a/DGN/Views/Users/Profile.cshtml
+++ b/DGN/Views/Users/Profile.cshtml
@@ -125,7 +125,7 @@
                                 <h6 class="mb-0">@Html.DisplayNameFor(model => model.Email)</h6>
                             </div>
                             <div class="col-sm-9 text-secondary">
-                                <input asp-for="Email" class="form-control" disabled>
+                                <input asp-for="Email" class="form-control" readonly>
                                 <span class="text-danger"></span>
                             </div>
                         </div>
